--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.2</version>
+        </dependency>
     </dependencies>
 
     <build>
