--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
       username: root
-      password: admin
+      password: root
       url: jdbc:mysql://localhost:3306/vehicle_db?createDatabaseIfNotExist=true
 
     jpa:
@@ -13,8 +13,8 @@ spring:
       generate-ddl: true
       hibernate:
         ddl-auto: update # Options: none, update, create, create-drop
-      properties:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+#      properties:
+#        dialect: org.hibernate.dialect.MySQL8Dialect
 
     batch:
       job:
@@ -30,6 +30,39 @@ spring:
     #This configuration avoid using the starter-web tomcat
     main:
       web-application-type: none
+
+  #Mail configuration after adding the mailhog within the docker compose yml file and start the docker compose with docker-compose up command
+#    mail:
+#      host: localhost
+#      port: 8025
+#      username: ""
+#      password: ""
+#      properties:
+#        mail:
+#          smtp:
+#            auth: false
+
+  #Gmail Server message configuration
+  #Added the line below in your configuration VM and make sure to specify the rigth username and password
+  #MAIL_HOST=smtp.gmail.com;MAIL_PORT=587;MAIL_USERNAME=Your username;MAIL_PASSWORD=Your password
+  # if the 2FA is activated for your email, you need to follow these step to generate the password
+  #  1-Go to your Google Account settings.
+  #  2-Navigate to "Security".
+  #  3-Under "Signing in to Google", select "App passwords".
+  #  4-Generate a new app password for your email application and use that password in your configuration.
+    mail:
+      host:  smtp.gmail.com
+      port: 587
+      username: ngnawens@gmail.com #Sender email
+      password: qsvx gtew rdfn uvkl # sender password
+      protocol: smtp
+      properties:
+        mail:
+          smtp:
+            auth: true
+            starttls:
+              enable: true
+              required: true
 
 #This is the dynamic list. You can add another key, value.
 input:
@@ -53,4 +86,5 @@ input:
     img3: /data/resource/img3.png
     img4: /data/resource/img4.png
   all: /data/resource/*.*
+
 
